--- a/README.md.tmpl
+++ b/README.md.tmpl
@@ -10,7 +10,7 @@
 
 </div>
 
-<img src="./logo-dark.svg#gh-light-mode-only" height="42px"/>
+<img src="./logo-dark.svg#gh-dark-mode-only" height="42px"/>
 <img src="./logo-light.svg#gh-light-mode-only" height="42px"/>
 
 # {{ tmplr.package_name }}
