--- a/README.md.tmpl
+++ b/README.md.tmpl
@@ -4,7 +4,7 @@
 
 <div align="right">
 
-[![npm bundle size](https://img.shields.io/bundlephobia/minzip/{{ tmplr.package_name }}@latest?color=black&label=&style=flat-square)](https://bundlephobia.com/package/{{ tmplr.package_name }}@latest)
+[![npm package minimized gzipped size](https://img.shields.io/bundlejs/size/{{ tmplr.package_name }}?style=flat-square&label=%20&color=black)](https://bundlejs.com/?q={{ tmplr.package_name }})
 [![npm](https://img.shields.io/npm/v/{{ tmplr.package_name }}?color=black&label=&style=flat-square)](https://www.npmjs.com/package/{{ tmplr.package_name }})
 [![GitHub Workflow Status](https://img.shields.io/github/actions/workflow/status/{{ tmplr.repo_owner }}/{{ tmplr.repo_name }}/coverage.yml?label=&style=flat-square)]({{ tmplr.repo_url }}/actions/workflows/coverage.yml)
 
